# pipeline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci-cd.yml
app/: __init__.py  routes.py
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  SETUP.md
tests/: conftest.py  test_routes.py
